Layered the whole Project into Application/Business/DataAccess